[package]
name = "SP"
version = "0.1.0"
authors = ["rokostik <rokostik@gmail.com>"]

[dependencies]
rocket = "0.1.5"
rocket_codegen = "0.1.5"
serde = "0.8"
serde_json = "0.8"
serde_derive = "0.8"
diesel = { version = "0.9.1", features = ["postgres", "chrono"]}
diesel_codegen = { version = "0.9.0", features = ["postgres"] }
dotenv = "0.8.0"
time = "0.1"
tera = "0.6.2"
rand = "0.3.15"
redis = "0.8.0"
bcrypt = "0.1.3"
base64 = "0.3.0"
chrono = "0.2"

[dependencies.rocket_contrib]
version = "0.1.5"
default_features = false
features = [ "tera_templates" ]
